fixed figures in discussion

--- a/ecjsample.tex
+++ b/ecjsample.tex
@@ -296,13 +296,13 @@ GA-dA displays the best performance on the Royal Road problem, consistently solv
 \section{Discussion}
 
 \subsection{Algorithmic Comparison}
-The results presented in the preceding section demonstrate that the denoising autoencoder (GA-dA) and NADE (GA-NADE) methods perform well across a number of difficult discrete problems. GA-dA outperforms the other methods on both knapsack problems and the Royal Road and GA-NADE is the only algorithm that is able to consistently solve the MaxSat problem instance. GA-dA outperforms a GA on all test problems in terms of the quality of the final solution and/or the number of evaluations required. GA-NADE outperforms a GA on all of the problems apart from the Royal Road and the 500-item knapsack where they are not significantly different. BOA outperforms both neural network methods on the HIFF problems. It also outperforms GA-NADE on the Royal Road and Knapsack-500 problems but not on the others. This suggests that the BOA EDA method is better able to discover the type of dependancy present in the HIFF problem. GA-NADE performs considerably better than GA-dA, which suggests that the Bayesian Graph-based generative model is well-suited to discovering the structure in the search space present in this problem. The poor performance of PBIL on the HIFF problem indicates that a model capable of learning complex multivariate dependencies is needed. The structure learnt by GA-dA allows it to significantly outperform the GA but it is much slower than BOA or GA-NADE. 
+The results presented in the preceding section demonstrate that the denoising autoencoder (GA-dA) and NADE (GA-NADE) methods perform well across a number of difficult discrete problems. GA-dA outperforms the other methods on both knapsack problems and the Royal Road and GA-NADE is the only algorithm that is able to consistently solve the MaxSat problem instance. GA-dA outperforms a GA on all test problems in terms of the quality of the final solution and/or the number of evaluations required. GA-NADE outperforms a GA on all of the problems apart from the Royal Road and the 500-item knapsack where they are not significantly different. BOA outperforms both neural network methods on the HIFF problems. It also outperforms GA-NADE on the Royal Road and Knapsack-500 problems but not on the others. This suggests that BOA is better able to discover the type of dependancy present in the HIFF problem. GA-NADE performs considerably better than GA-dA, which suggests that the Bayesian network-based generative model is well-suited to discovering the structure in the search space present in this problem. The poor performance of PBIL on the HIFF problem indicates that a model capable of learning complex multivariate dependencies is needed. The structure learnt by GA-dA allows it to significantly outperform the GA but it is much slower than BOA or GA-NADE on this problem. 
 
-A MaxSat problem is difficult because there are a large number of interdependencies between variables and solving subproblems in the form of individual clauses can lead you away from the optimal solution (ref\ref{}). GA-NADE is able to solve this problem consistently while BOA is not. This problem could be well suited to the NADE model which assumes a dependency between every variable - each variable is either a parent or a child of another. Thus a complex joint distribution of the variables is learnt. The dA is also able to learn multi-variate dependency with the potential advantage of having no precedence constraints. The tested implementation of BOA restricts each node to have at most 2 parents, which may adversely affect its ability to find solutions to this problem. Increasing this limit is prohibitively expensive.
+A MaxSat problem is difficult because there are a large number of interdependencies between variables and solving subproblems in the form of individual clauses can lead you away from the optimal solution \citep{rana1998genetic}. GA-NADE is able to solve this problem consistently while BOA is not. This problem could be well suited to the NADE model which assumes a dependency between every variable - each variable is either a parent or a child of another. Thus a complex joint distribution of the variables is learnt. The dA is also able to learn multi-variate dependency with the potential advantage of having no precedence constraints. The tested implementation of BOA restricts each node to have at most 2 parents, which may adversely affect its ability to find solutions to this problem. Increasing this limit is prohibitively expensive.
 
-The knapsack problems are interesting for two reasons, they have have real-world uses in resource management and they do not have obvious linkages. A 3-CNF MaxSat problem is complex because individual variables are present in multiple clauses and changing one variable can have a large impact on the fitness of the sequence. Due to the nature of the constraint handling of these knapsack problems, here a small change can have a huge impact on fitness. If a solution changes from being under to over capacity, its value will swing from positive to negative. If there were no constraints, a knapsack problem would reduce to a MaxOnes problem and all variables would be fully independent. Variables can still be treated independently, which effectively will give a higher probability to high value or high density items. Given more constraints the dependencies between groups of variables become more complex as certain combinations of items are required in order to satisfy the constraints. In terms of the rate of improvement, PBIL performs much better on the single constraint knapsack problem but takes much longer to get close to the optimal solution compared to GA-NADE, GA-dA and the GA. BOA has a much slower improvement rate on the Weing8 instance and does not find as good solutions. The GA uses a high crossover rate of 0.5 and thus swaps a large number of partial solutions. GA-dA has the fastest improvement rate and the highest mean score on both knapsack problems. This may be the type of problem for which it is best suited, as the dA has no ordering constraints, can capture dependencies between large groups of variables and, importantly, mutate around these solutions.
+The knapsack problems are interesting for two reasons, they have have real-world uses in resource management and they do not have obvious linkages. A 3-CNF MaxSat problem is complex because individual variables are present in multiple clauses and changing one variable can have a large impact on the fitness of the sequence. Due to the nature of the constraint handling of these knapsack problems, here a small change in the genotype can have a huge impact on fitness. If a solution changes from being under to over capacity, its value will swing from positive to negative. If there were no constraints, a knapsack problem would reduce to a MaxOnes problem and all variables would be fully independent. Variables can still be treated independently, which effectively will assign a higher probability to high value or denser items. Given more constraints the dependencies between groups of variables become more complex as certain combinations of items are required in order to satisfy the constraints. In terms of the rate of improvement, PBIL performs much better on the single constraint knapsack problem but takes much longer to get close to the optimal solution compared to the other algorithms. BOA has a much slower improvement rate on the Weing8 instance and does not find as good solutions. The GA uses a high crossover rate of 0.5 and thus swaps a large number of partial solutions. GA-dA has the fastest improvement rate and the highest mean score on both knapsack problems. This may be the type of problem for which it is best suited, as the dA has no ordering constraints, can capture dependencies between large groups of variables and, importantly, mutate around these solutions.
 
-GA-dA is also the fastest consistent solver of the 128-bit Royal Road Problem. This problem is famous because it was used to identify the hitch-hiking phenomenon that can adversely affect the performance of GAs. For an EDA to perform well on this problem, it has to build a model that learns that either the blocks are independent or that every variable is independent. PBIL suffers on this problem by falling into a local optima where certain variables have a very low probability of outputting a one. At this point it becomes very unlikely that certain subproblems will be solved. At the point of solving, BOA has learnt a model where every variable is independent. We will look more closely at the models produced by GA-dA and GA-NADE in the next section but GA-NADE clearly learns a complex relationship between variables that does not exist in the real problem. GA-dA hones in a very small part of the sub-space, which allows it to quickly find the optimal solution.
+GA-dA is also the fastest consistent solver of the 128-bit Royal Road Problem. This problem is famous because it was used to identify the hitch-hiking phenomenon that can adversely affect the performance of GAs. For an EDA to perform well on this problem, it has to build a model that learns that either the partitions are independent or that every variable in the string is independent. PBIL suffers on this problem by falling into a local optima where certain variables have a very low probability of outputting a one. At this point it becomes very unlikely that certain subproblems will be solved. At the point of solving, BOA has learnt a model where every variable is independent. We will look more closely at the models produced by GA-dA and GA-NADE in the next section but GA-NADE clearly learns a complex relationship between variables that does not exist in the real problem. GA-dA hones in a very small part of the sub-space, which allows it to quickly find the optimal solution.
 %
 %- Royal Road has lots of noise that may be fitted by NADE
 %- Knapsacks have dependency but are also independent
@@ -353,22 +353,15 @@ There are clear differences in the performance of the two Neural Network based a
     }
 }
 \caption[Optional caption for list of figures]{Showing samples from the dA and NADE on the Royal Road with Linkages problem.}
-  \label{fig:nade_vs_da1}
-\end{figure}
-
-\begin{figure}[t!]
-\centering
-    \includegraphics[scale=0.7]{da_croad.pdf}
-  \includegraphics[scale=0.7]{nade_croad.pdf}
-  \caption{Showing sub-problem solutions from 50,000 samples from the dA and NADE given different conditions.}
   \label{fig:churchillroadexample}
 \end{figure}
 
-A new objective function has been devised based on Mitchell et al.'s Royal Road [\cite{mitchell}]. A solution consists of \(n\) non-overlapping partitions, \(p_i i\in{[1\ ... \ n]}\), of size \(2k\). \(p_i\) is further divided into two non-overlapping partitions of size \(k\), \(\hat{p}_{iL}\) on the left side and \(\hat{p}_{iR}\) on the right. If each bit in \(\hat{p}_{iL}\) is equal to 1 and each bit in \(\hat{p}_{iR}\) is equal to 0, 1 is added to fitness. Alternatively, a 1 is added to fitness if each bit in \(\hat{p}_{iL}\) is equal to 0 and each bit in \(\hat{p}_{iR}\) is equal to 1. Finally, an additional 1 is added to fitness if every bit in \(\hat{p}_{1L}\) and \(\hat{p}_{nR}\) are equal to 1, or if every bit in \(\hat{p}_{1L}\) and \(\hat{p}_{nR}\) is equal to 0, where \(i=1\) signifies the first partition and \(i=n\) the last. An example is given for a 32-bit sequence in figure \ref{fig:churchillroadexample}. This fitness function has been invented to explore how the algorithms deal with dependency between blocks of variables. There is linkage between the first and second halves of each partition, which is referred to below as `local-linkage', and between the first \(k\) and the last \(k\) bits in the string, referred to as the `global-linkage'.
+
+A new objective function has been devised based on Mitchell et al.'s Royal Road \citep{mitchell1992royal}. A solution consists of \(n\) non-overlapping partitions, \(p_i i\in{[1\ ... \ n]}\), of size \(2k\). \(p_i\) is further divided into two non-overlapping partitions of size \(k\), \(\hat{p}_{iL}\) on the left side and \(\hat{p}_{iR}\) on the right. If each bit in \(\hat{p}_{iL}\) is equal to 1 and each bit in \(\hat{p}_{iR}\) is equal to 0, 1 is added to fitness. Alternatively, a 1 is added to fitness if each bit in \(\hat{p}_{iL}\) is equal to 0 and each bit in \(\hat{p}_{iR}\) is equal to 1. Finally, an additional 1 is added to fitness if every bit in \(\hat{p}_{1L}\) and \(\hat{p}_{nR}\) are equal to 1, or if every bit in \(\hat{p}_{1L}\) and \(\hat{p}_{nR}\) is equal to 0, where \(i=1\) signifies the first partition and \(i=n\) the last. An example is given for a 32-bit sequence in figure \ref{fig:churchillroadexample}. This fitness function has been invented to explore how the algorithms deal with dependency between blocks of variables. There is linkage between the first and second halves of each partition, which is referred to below as `local-linkage', and between the first \(k\) and the last \(k\) bits in the string, referred to as the `global-linkage'.
 
 GA-NADE and GA-dA are applied to a 32-bit version of this problem (\(k=4,n=4\)), both using a population size of 500. Samples produced by the models at the point that the optimal solution is found are explored in figures ~\ref{fig:nade_vs_da1} and ~\ref{fig:nade_vs_da2}. In figure ~\ref{fig:nade_vs_da1}(a), samples have been reduced from 32 dimensions to 8, by displaying only the sub-partitions. If more than 2 bits in a sub-partition are equal to 1, the corresponding element in the string in the figure is assigned a 1, with a 0 otherwise. Underneath each figure a plot shows the overall bias, the probability of a sub-partition consisting of all 1s or all 0s, averaged across the samples. Figure ~\ref{fig:nade_vs_da1}(b) shows, for each sample, which of the four partitions have been solved (sub-problems 1 - 4), and whether every bit in \(\hat{p}_{1L}\) and \(\hat{p}_{nR}\) is equal to 1, or if every bit in \(\hat{p}_{1L}\) and \(\hat{p}_{nR}\) is equal to 0 (sub-problem 5). Therefore it shows which local-linkage sub-problems have been solved and whether the global-linkage problem has also been solved.
 
-Figure ~\ref{fig:nade_vs_da1} shows 500 samples from the dA and NADE, with the dA using the final population as input. In terms of sub-partition behaviour, the NADE exhibits a much clearer bias, with sub-partition 3 biased towards 0s and 4 biased towards 1s, and sub-partition 5 biased towards 1s and 6 biased towards 0s. This shows that the NADE has produced a peaked distribution in certain parts of solution space. Looking at the solution of sub-problems in figure ~\ref{fig:nade_vs_da1}(b), the samples generated by both algorithms solve the problems in all of the partitions with high probability. NADE displays a slightly higher probability of solving the local-linkage problems in partitions but both have an equal probability of solving sub-problem 5.
+Figure ~\ref{fig:nade_vs_da1} shows 500 samples from the dA and NADE, with the dA using the final population as input. In terms of sub-partition behaviour, the NADE exhibits a much clearer bias, with sub-partition 3 biased towards 0s and 4 biased towards 1s, and sub-partition 5 biased towards 1s and 6 biased towards 0s. This shows that the NADE has produced a peaked distribution in certain parts of solution space. Looking at the solution of sub-problems in figure ~\ref{fig:nade_vs_da1}(b), the samples generated by both algorithms solve the problems in all of the partitions with high probability. NADE displays a slightly higher probability of solving the local-linkage problems in partitions but both have an equal probability of solving the global-linkage problem in sub-problem 5.
 
 We have seen in Figure \ref{fig:nade_vs_da1} that although the algorithms produce samples from different distributions they have similar probabilities of solving the sub-problems. In figure~\ref{fig:nade_vs_da2} we now probe the models to investigate the structure that has been learnt. Figure \ref{fig:nade_vs_da2}(a) shows sub-problems solved by 50,000 samples from the dA given different input conditions. The first condition is the same as in figure \ref{fig:nade_vs_da2}, using the final population as input to the model. The second condition uses input strings sampled from a uniform random distribution. The third, fourth and fifth conditions also use samples from a uniform random distribution for input but fix the sub-partitions \(\hat{p}_{1L}\) (referred to as \(c_{first}\)),  \(\hat{p}_{3L}\) (\(c_{middle}\)), and \(\hat{p}_{4R}\) (\(c_{last}\)) to equal all ones, respectively.
 
@@ -427,9 +420,9 @@ The samples displayed in figure \ref{fig:nade_vs_da2} provide an interesting ins
 
 \subsubsection{Tested Problems}
 
-We will now take a closer look at a selection of the test problems where there was a marked difference between GA-dA and GA-NADE: HIFF-128, the Royal-Road and Weing8. Figure \ref{fig:results_hists1}(a) shows the distribution of the mean distances from their 5 nearest neighbours and the fitnesses of 50,000 samples from the dA and NADE at the point that the optimal solution is found on HIFF-128. Here we see that there is much greater diversity in the samples produced by the NADE, while the dA has a much more peaked distribution. This can be partly explained by the fact that the dA does not use niching on this problem (which improved its performance). On this problem, most of the dA's solutions are small mutations around the local optima of 784, while the NADE produces a much more diverse set of samples. Looking at a selection of samples in \ref{fig:results_hists1}(b), we see that the dA model using the population as input is extremely peaked, with almost all variables in the string set to 1 apart from the last 16 bits. Using input sampled from a uniform random distribution produces a more varied distribution of solutions, although the fitness of the samples is not as high. The NADE produces a much less biased distribution of samples, which explains its better performance on this problem. Of particular interest is that samples from the NADE contain partial solutions from both the `all ones' and `all zeroes' global optima, while the dA concentrates on the `all ones' optima. This implies that NADE is better suited towards capturing the distribution of multi-modal search spaces.
+We will now take a closer look at a selection of the test problems where there was a marked difference between GA-dA and GA-NADE: HIFF-128, the Royal Road and Weing8. Figure \ref{fig:results_hists1}(a) shows the distribution of the mean distances from their 5 nearest neighbours and the fitnesses of 50,000 samples from the dA and NADE at the point that the optimal solution is found on HIFF-128. Here we see that there is much greater diversity in the samples produced by the NADE, while the dA has a much more peaked distribution. This can be partly explained by the fact that the dA does not use niching on this problem (as a result of the grid search). On this problem, most of the dA's solutions are small mutations around the local optima of 784, while the NADE produces a much more diverse set of samples. Looking at a selection of samples in figure \ref{fig:results_hists1}(b), we see that the dA model using the population as input is extremely peaked, with almost all variables in the string set to 1 apart from the last 16 bits. Using input sampled from a uniform random distribution produces a more varied distribution of solutions, although the fitness of the samples is not as high. The NADE produces a much less biased distribution of samples, which explains its better performance on this problem. Of particular interest is that samples from the NADE contain partial solutions from both the `all ones' and `all zeroes' global optima, while the dA concentrates on the `all ones' optima. This implies that NADE is better suited towards capturing the distribution of multi-modal search spaces.
 
-Figure \ref{fig:results_hists2}(a) shows a similar distribution of samples is produced by the dA on the Royal Road problem, with 15 of the 16 8 bit partitions almost always being all ones and mutations around a single unfilled partition. Although the NADE appears to produce more diverse samples, the distribution is peaked with a very low probability of a one on bits 64 - 80 (partitions 8 and 9). Fixing \(p(x_i)=1\) for the first 64 bits (\(i\in{[1\ ...\ 64]}\)) in the NADE modelling when sampling increases \(p(x_i)=0\) for \(i\in{[64\ ...\ 80]}\). This shows that a false dependency has been learnt linking earlier parts of the bit string to partitions 15 and 16, and it makes it very unlikely that the optimal solution will occur in a sample. This could be due to the topology of the dependency graph that the NADE is tied to. For the dA model, we see in this case that there is very little difference between using input from a random distribution or from the population, which is due to the high level of corruption (\(p(c)=0.9\)).
+Figure \ref{fig:results_hists2}(a) shows a similar distribution of samples is produced by the dA on the Royal Road problem, with 15 of the 16 8-bit partitions almost always being all ones and mutations around a single unfilled partition. Although the NADE appears to produce more diverse samples, the distribution is peaked with a very low probability of a one on bits 64 - 80 (partitions 8 and 9). Fixing \(p(x_i)=1\) for the first 64 bits (\(i\in{[1\ ...\ 64]}\)) in the NADE modelling when sampling increases \(p(x_i)=0\) for \(i\in{[64\ ...\ 80]}\). This shows that a false dependency has been learnt linking earlier parts of the bit string to partitions 15 and 16, and it makes it very unlikely that the optimal solution will occur in a sample. This could be due to the topology of the dependency graph that the NADE is tied to. For the dA model, we see in this case that there is very little difference between using input from a random distribution or from the population, which is due to the high level of corruption (\(p(c)=0.9\)).
 
 For the Weing8 knapsack problem instance, the histograms in figure \ref{fig:results_hists3}(a) show that the NADE produces slightly less diversity in its samples. The fitnesses of the samples are also heavily skewed towards very high scoring. Both models produce a large number of infeasible (and thus low scoring) samples. The raster plots in figure \ref{fig:results_hists3}(a) indicate that both models concentrate on similar solutions, with a peaked response to many variables on the left side of the string (bits 50 and under). As indicated in the aggregate plot in figure \ref{fig:results_hists3}(b), the NADE has a more peaked response to many variables than the dA. We see in the raster plot that there are a large number of samples from the NADE that use fewer items from the left side of the string and more from the right side (leading to the appearance of lines in the plot). This suggests that, similarly to the HIFF example, the NADE can model a multi-modal distribution, which could be useful for multi-modal search spaces or multi-objective optimisation. The corruption level is relatively high in the dA in this example (\(p(c)=0.25\)), and there is only small differences between using the population and a random sample as input to the model. However, using the population as input does increase the probability of certain variables in a number of positions.
  
@@ -438,12 +431,12 @@ In this paper we have demonstrated how the dA and NADE models can be successfull
 
 In the last decade there has been a resurgence of interest in neural network-based methods, spurred by so called `deep architectures'. Both the dA and NADE could potentially benefit from the hierarchical features supported by deep networks and this needs to be investigated further. A potential problem with the NADE model is the precedence ordering of variables, which could have a great effect on the quality of the learnt distribution, as well as the training time. There are several paths that could be taken in this direction, for example having multiple models being learnt in parallel or using alternate methods to learn Bayesian networks at certain points in the search process and using the discovered ordering for the NADE model.
 
-With both models, although especially with the NADE, the addition of local search could improve performance by providing more exploitation and fine-tuning of solutions, as seen in pelikan2003hierarchical. This would allow the dA or NADE to power a more global search and a share of the responsibility for exploitation to the local search procedure. In the same vein, an interesting extension of the algorithms would be to hybridise them with a selectorecombinative evolutionary algorithm (EA). Here, the EA could maintain the population of solutions, recombining and mutating them, while the neural network models are trained on the population. The EA could draw upon the models to generate genotypes, to guide search in a direction learnt from the structure of the solution space. 
+With both models, although especially with the NADE, the addition of local search could improve performance by providing more exploitation and fine-tuning of solutions, as seen in \citep{pelikan2003hierarchical}. This would allow the dA or NADE to power a more global search and a share of the responsibility for exploitation to the local search procedure. In the same vein, an interesting extension of the algorithms would be to hybridise them with a selecto-recombinative evolutionary algorithm (EA). Here, the EA could maintain the population of solutions, recombining and mutating them, while the neural network models are trained on the population. The EA could draw upon the models to generate genotypes, to guide search in a direction learnt from the structure of the solution space. 
 \subsection{Real Valued, Mixed Integer and Multi-objective Problems}
 Both the NADE and dA can be modified to work with continuous or mixed-integer domains, providing an advantage over other discrete only EDA methods. As briefly mentioned earlier, the outputs of the dA can be interpreted as parameters of a distribution from which new solutions are sampled. Therefore, for real-valued problems, the outputs of the dA can be interpreted as means of a Gaussian distribution. Similarly, instead of predicting the means of a Bernouilli distribution, the NADE can be set up to predict the means and variances of a one-dimensional mixture of Gaussians. This real-valued variant of the NADE is called the RNADE (\cite{uria2013rnade}). It is also be possible to mix Bernouilli and Guassian output units, to optimise Mixed Integer Problems, an underrepresented area in EDA optimisation. The fact that the proposed algorithms can be generalised to real-valued problems is very useful since other popular EDAs like BOA and hBOA work only for discrete-valued data.
 
 \section{Conclusion}
-We have presented a novel stochastic evolutionary algorithm based on two neural network models that provide a distribution of mutated samples. Training online, using the best found genotypes, the models are able adaptively learn an exploration distribution, which guides it towards optimal solutions on difficult problems such as the 256-bit HIFF, regularly outperforming a Genetic Algorithm and other EDA methods on a number of problems.
+We have presented a novel stochastic evolutionary algorithm based on two neural network models that iteratively learn to produce more effective genotype. Training online, using the best found genotypes, the models are able to adaptively learn an exploration distribution, which guides search towards optimal solutions on difficult problems such as the 256-bit HIFF and a 430 3-CNF MaxSat problem, regularly outperforming a Genetic Algorithm and other EDA methods on a number of problems. 
 \small
 
 \bibliographystyle{apalike}
